--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <em>LIMS Administrator</em>
         </p>
         <p>
-          I work as a LIMS Administrator for <a href="https://www.herbalife.com/">Herbalife</a>. I also am practicing learn how
-          code. I have been using python and html. My goal is to keep learning more
-          and to get better at it, and possibly make a good career out of it.
+          I work as a LIMS Administrator for <a href="https://www.herbalife.com/">Herbalife</a>. I am practicing and learning how to
+          code and be a better developer. I have been using javascript, CSS, and HTML. I also have experience in python, C, and C++. My goal is to keep learning more
+          and to hopefully make a good career out of it.
         </p>
       </td>
     </tr>
@@ -31,6 +31,9 @@
   <ul>
     <li>
       Bachelor of Science in Biochemistry from UCLA
+    </li>
+    <li>
+      Masters of Computer Science from CSUF
     </li>
     <li>
       LIMS Administrator from LabWare
