did more formatting changes

--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -7,7 +7,12 @@ import <!DOCTYPE html>
   <body>
     <h1>My Contact Details</h1>
     <p>
-      Email me at emadalbalas@gmail.com
+      <ul>
+          Email: emadalbalas@gmail.com
+      </ul>
+      <ul>
+        Phone Number: (949) 413 - 6494
+      </ul>
       </p>
   </body>
 </html>
