--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing=20>
     <tr>
       <td>
-        <img src="https://media-exp1.licdn.com/dms/image/C5603AQF0UY7uEn2HKg/profile-displayphoto-shrink_100_100/0/1569007196304?e=1644451200&v=beta&t=wt8xu5ERIwOiePgCjUU6Xj5o55GkQSbU7PX7upb4rGU" alt="emad profile picture" <br />
+        <img src="https://media.licdn.com/dms/image/C5603AQF0UY7uEn2HKg/profile-displayphoto-shrink_800_800/0/1569007196304?e=2147483647&v=beta&t=FFkcNY_8KKnkyJOxmHDVcmnogViRobzoFlbjmglZFro" alt="emad profile picture"<br />
       </td>
       <td>
         <h1>Emad Albalas</h1>
@@ -19,9 +19,24 @@
         </p>
         <p>
           I work as a LIMS Administrator for <a href="https://www.herbalife.com/">Herbalife</a>. I am practicing and learning how to
-          code and be a better developer. I have been using javascript, CSS, and HTML. I also have experience in python, C, and C++. My goal is to keep learning more
+          code to be a better developer. I have been using javascript, CSS, and HTML. I also have experience in python, C, and C++. I am familiar with Agile Scrum. My goal is to keep learning more
           and to hopefully make a good career out of it.
         </p>
+        <p>
+          <em>Courses completed:</em>
+        </p>
+        <ul>
+          Data Structures
+        </ul>
+        <ul>
+          Algorithms 
+        </ul>
+        <ul>
+          Languages and Compilers
+        </ul>
+        <ul>
+          Operating Systems
+        </ul>
       </td>
     </tr>
   </table>
@@ -62,7 +77,7 @@
   <h3><strong>Hobbies</strong></h3>
   <ol>
     <li>
-      Coding
+      Developing and Programming
     </li>
     <li>
       Powerlifting
@@ -71,7 +86,7 @@
       Investing
     </li>
     <li>
-      Technologies
+      Advanced Technologies
     </li>
   </ol>
   <h3><a href="Contact-Me.html" </a>Contact Me</h3>
